Croppie resolution fixed, but mobile still has no solution

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -352,3 +352,8 @@ body {
         margin-bottom : 5px;
     }
 }
+
+.uploaded_img {
+    width: 100%;
+    height: auto;
+}
